Project

General

Profile

Actions

Bug #9972

closed

tcltklib.c: a lot warnings format '%lx' on x64 mingw

Bug #9972: tcltklib.c: a lot warnings format '%lx' on x64 mingw

Added by h.shirosaki (Hiroshi Shirosaki) over 12 years ago. Updated over 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.2.0dev (2014-06-23 trunk 46506) [x64-mingw32]
[ruby-core:63283]

Description

I see the following warnings while building mingw x64 ruby.
VALUE is not long but long long on Windows x64.
Instead we could use %p and void * cast.

../../../../../ruby/ext/tk/tcltklib.c:2501:21: warning: format '%lx' expects argument of type 'long unsigned int', but argument 3 has type 'VALUE' [-Wformat]
../../../../../ruby/ext/tk/tcltklib.c:2502:21: warning: format '%lx' expects argument of type 'long unsigned int', but argument 3 has type 'VALUE' [-Wformat]
../../../../../ruby/ext/tk/tcltklib.c: In function 'lib_eventloop_ensure':
../../../../../ruby/ext/tk/tcltklib.c:2623:5: warning: format '%lx' expects argument of type 'long unsigned int', but argument 3 has type 'VALUE' [-Wformat]
../../../../../ruby/ext/tk/tcltklib.c:2624:5: warning: format '%lx' expects argument of type 'long unsigned int', but argument 3 has type 'VALUE' [-Wformat]

Files

Actions

Also available in: PDF Atom