tcltklib.c: fix format specifiers

* ext/tk/tcltklib.c: fix format specifiers for VALUE and
  Tcl_Interp*.  [ruby-core:63283] [Bug #9972]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46530 b2dd03c8-39d4-4d8f-98ff-823fe69b080e